# fast-API

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_test.yaml  build_and_test.yml  ci_cd.yml
app/: .env.test  Dockerfile  main.py  pyproject.toml
app/data_backend/: about.md  spark_oceandb.py
app/routers/: connect_db.py  database.py  schemas.py  upload_data.py
app/services/: about.md  spark_oceandb.py
app/spark_backend/backend/: about.md  main.py
app/templates/: Index.html
nginx/: nginx.conf
tests/: conftest.py
tests/api/: test_connect.py
tests/data_backend_test/: test_spark.py
tests/services/: test_spark.py
tests/services_test/: test_spark.py
uploaded_files/: sample.csv
