[tool.poetry]
name = "OceanDB-backend"
version = "0.1.0"
description = ""
authors = ["Mikhail Pavlov <mikhail.pavlov@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
pydantic = "*"
python-multipart = "*"
httpx = "*"
uvicorn = "*"
sqlalchemy = "^2.0.21"
pymysql = "^1.1.0"
psycopg2-binary = "*"
boto3 = "^1.28.62"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
faker = "*"
pre-commit = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
