[tool.poetry]
name = "OceanDB-backend"
version = "0.1.0"
description = ""
authors = ["Mikhail Pavlov <mikhail.pavlov@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
faker = "^19.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
